--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./scripts.js"></script>
+    <script src="./object.js"></script>
 </body>
 </html>
