Atualizando a aula de function com : Funções Construtoras.

--- a/Functions/index.html
+++ b/Functions/index.html
@@ -7,6 +7,6 @@
     <title>Functions</title>
 </head>
 <body>
-    <script src="./functions"></script>
+    <script src="./functions.js"></script>
 </body>
 </html>
