Iniciando aula de expressões e operadores

--- a/Functions/index.html
+++ b/Functions/index.html
@@ -7,6 +7,6 @@
     <title>Functions</title>
 </head>
 <body>
-    <script src="./functions.js"></script>
+    <script src="./expressAndoperators.js"></script>
 </body>
 </html>
