Atualizando aula de operadores matematicos e ordem de precedencia

--- a/Functions/index.html
+++ b/Functions/index.html
@@ -7,6 +7,6 @@
     <title>Functions</title>
 </head>
 <body>
-    <script src="./expressAndoperators.js"></script>
+    <script src="./operadoresAritmeticos.js"></script>
 </body>
 </html>
