--- a/OperadoresDeString/index.html
+++ b/OperadoresDeString/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Operadores de string</title>
-    <script src="condicionaisEcontroleDeFluxo.js"></script>
+    <script src="throwAndTryCatch.js"></script>
 </head>
 <body>
     
