--- a/Discover/Exercicios/index.html
+++ b/Discover/Exercicios/index.html
@@ -7,6 +7,6 @@
     <title>Exercicios</title>
 </head>
 <body>
-    <script src="sistemasDeNotas.js"></script>    
+    <script src="sistemasDeGastosFamiliar.js"></script>    
 </body>
 </html>
